--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
 name = pyadsb
-version = 0.0.2
+version = 0.0.3
 author = Oskar Enoksson
 author_email = enok@lysator.liu.se
 url = https://github.com/enok71/adsb
 description = Functionality for encoding/decoding ADSB messages written in pure Python 3
 long_description = file: README.md
 long_description_content_type = text/markdown
-license_file = LICENSE
+license_files = [ LICENSE ]
 keywords =
     adsb, aircrafts
 project_urls =
@@ -28,7 +28,8 @@ packages = find:
 include_package_data = true
 python_requires = >=3.8
 
-[bdist_wheel]
+[options.packages.find]
+where=src
 
 [pylint]
 disable =
