--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Build release distributions
         run: |
           # NOTE: put your own distribution build steps here.
-          python -m pip install setuptools wheel twine
-          python setup.py sdist bdist_wheel
+          python -m pip install setuptools wheel twine build
+          python -m build
 
       - name: Upload distributions
         uses: actions/upload-artifact@v4
